--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css"> 
+    <link rel="stylesheet" href="./node_modules/@crestron/ch5-theme/output/themes/light-theme.css">
     <title>First CH5 program</title>
 </head>
 <body>
     <h1>Basics of CH5 Comm Library</h1>
     <button class="demo">Button</button>
-    <button class="demo">Button</button>
-    <ch5-slider sendEventOnChange="ChangeWifistrength" receiveStateValue="Wifistrength"></ch5-slider>
+    <ch5-slider 
+        id="theSlider"
+        value="-40"
+        ticks='{"0":"-60", "25":"-40", "50":"-20", "75":"-10", "100": "0" }'
+        showTickValues="true"
+        sendEventOnChange="11"
+        receivestatevalue="11"
+    ></ch5-slider>
+    <ch5-button 
+        label="Toggle" 
+        sendeventonclick="12" 
+        receivestateselected="13" 
+        receivestateenable="14"
+        noshowType="visibility" 
+        receivestateshow="15" >
+    </ch5-button>
 </body>
-<script  type="text/javascript" src="./assets/js/index.js"></script>
+    <script type="text/javascript" src="assets/js/cr-com-lib.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 </html>
