Bidirectional Control Established

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
         ticks='{"0":"-60", "25":"-40", "50":"-20", "75":"-10", "100": "0" }'
         showTickValues="true"
         sendEventOnChange="11"
-        receivestatevalue="11"
+        receiveStateValue="11"
     ></ch5-slider>
     <ch5-button 
         label="Toggle" 
-        sendeventonclick="12" 
-        receivestateselected="13" 
-        receivestateenable="14"
-        noshowType="visibility" 
-        receivestateshow="15" >
+        sendeventOnClick="12" 
+        receiveStateSelected="13" 
+        receiveStateEnable="14"
+        noShowType="visibility" 
+        receiveStateShow="15" >
     </ch5-button>
 </body>
-    <script type="text/javascript" src="assets/js/cr-com-lib.js"></script>
     <script type="text/javascript" src="assets/js/index.js"></script>
 </html>
