--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css"> 
-    <link rel="stylesheet" href="./node_modules/@crestron/ch5-theme/output/themes/light-theme.css">
-    <title>First CH5 program</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible"
+        content="IE=edge">
+  <link rel="stylesheet"
+        href="./assets/css/styles.css">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>Basics of CH5 Comm Library</h1>
-    <button class="demo">Button</button>
-    <ch5-slider 
-        id="theSlider"
-        value="-40"
-        ticks='{"0":"-60", "25":"-40", "50":"-20", "75":"-10", "100": "0" }'
-        showTickValues="true"
-        sendEventOnChange="11"
-        receiveStateValue="11"
-    ></ch5-slider>
-    <ch5-button 
-        label="Toggle" 
-        sendeventOnClick="12" 
-        receiveStateSelected="13" 
-        receiveStateEnable="14"
-        noShowType="visibility" 
-        receiveStateShow="15" >
-    </ch5-button>
+  <h1>Testing Websockets</h1>
+  <button id="OpenSocket">Open Socket</button>
+  <button id="CloseSocket">Close Socket</button>
+  <!-- <button id="RunEruda">Run Eruda</button> -->
+  <p id="SocketInfo"></p>
 </body>
-    <script type="text/javascript" src="assets/js/index.js"></script>
+<!-- <script src="node_modules/eruda/eruda.js"></script> -->
+<!-- <script src="./assets/js/eruda.js"></script> -->
+<script src="./assets/js/index.js"
+        type="text/javascript"></script>
+<!-- <script src="./assets/js/launcheruda.js"></script> -->
+<!-- <script>
+  eruda.init()
+</script> -->
+<script data-consolejs-channel="d216c566-b602-0e22-95aa-06591e992f78"
+        src="https://remotejs.com/agent/agent.js"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
+<!-- <script>
+  eruda.init();
+</script> -->
+
 </html>
