--- a/index.html
+++ b/index.html
@@ -16,22 +16,11 @@
   <h1>Testing Websockets</h1>
   <button id="OpenSocket">Open Socket</button>
   <button id="CloseSocket">Close Socket</button>
-  <!-- <button id="RunEruda">Run Eruda</button> -->
   <p id="SocketInfo"></p>
 </body>
-<!-- <script src="node_modules/eruda/eruda.js"></script> -->
-<!-- <script src="./assets/js/eruda.js"></script> -->
 <script src="./assets/js/index.js"
         type="text/javascript"></script>
-<!-- <script src="./assets/js/launcheruda.js"></script> -->
-<!-- <script>
-  eruda.init()
-</script> -->
-<script data-consolejs-channel="d216c566-b602-0e22-95aa-06591e992f78"
-        src="https://remotejs.com/agent/agent.js"></script>
-<!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script> -->
-<!-- <script>
-  eruda.init();
-</script> -->
+<!-- <script data-consolejs-channel="d216c566-b602-0e22-95aa-06591e992f78"
+        src="https://remotejs.com/agent/agent.js"></script> -->
 
 </html>
